[gd_scene load_steps=6 format=3 uid="uid://bd4q1xmlcttiq"]

[ext_resource type="Script" path="res://Character/CharacterController.gd" id="1_66vye"]
[ext_resource type="ArrayMesh" uid="uid://bqlg1bsyf7lly" path="res://HeadForward.obj" id="2_x7lwc"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_hk8cq"]
height = 1.5

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_esl10"]
points = PackedVector3Array(0.485063, 0.338297, 0.078818, -0.485063, -0.338297, -0.0788179, -0.485063, -0.338297, 0.078818, 0.239589, -0.684606, -0.0569671, -0.0564229, 0.428573, -0.462497, -0.101533, 0.406063, 0.462457, 0.101442, -0.406079, 0.462475, -0.306619, 0.636021, -0.0793803, 0.168857, -0.337757, -0.46163, 0.283229, 0.634401, -0.147195, -0.236011, -0.517155, -0.348478, -0.259644, -0.587127, 0.25974, 0.485063, -0.338297, -0.078818, 0.369533, 0.335914, -0.324744, 0.213579, 0.561857, 0.325809, -0.485063, 0.338297, -0.078818, 0.369533, -0.335914, 0.324744, -0.324701, 0.335869, 0.369578, -0.3247, 0.335869, -0.369578, -0.235268, -0.291397, 0.437034, -0.102578, 0.706536, 0.170804, 0.235304, 0.291324, 0.43702, -0.239548, -0.684623, -0.0569804, 0.12517, -0.682869, 0.216316, -0.235267, -0.291396, -0.437033, -0.0570726, 0.684576, -0.239628, 0.147286, -0.63438, -0.283219, 0.390945, -0.379675, -0.279219, -0.41539, 0.426532, 0.213367, 0.213369, 0.426535, -0.415393, -0.41289, -0.267775, -0.278987, 0.438854, -0.450029, 0.123736)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_g5jw4"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/sync = true
properties/2/path = NodePath("character_head/character_head_eyes:rotation")
properties/2/spawn = true
properties/2/sync = true

[node name="Character" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.604595, 0)
collision_layer = 2
script = ExtResource("1_66vye")
sensitivity = 0.1
vel_smooth = 0.2
gravity = 20

[node name="character_shape" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
visible = false
mesh = SubResource("CapsuleMesh_hk8cq")

[node name="character_collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
shape = SubResource("ConvexPolygonShape3D_esl10")

[node name="character_head" type="MeshInstance3D" parent="."]
transform = Transform3D(0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 1.89667, 0)
layers = 2
cast_shadow = 0
mesh = ExtResource("2_x7lwc")

[node name="character_head_eyes" type="Camera3D" parent="character_head"]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, -4.89967e-08, -0.451602, 0.675967)
cull_mask = 1048573
fov = 65.0

[node name="GUI" type="CanvasLayer" parent="character_head/character_head_eyes"]

[node name="FPS_Counter" type="Label" parent="character_head/character_head_eyes/GUI"]
offset_right = 159.0
offset_bottom = 55.0

[node name="Label" type="Label" parent="character_head/character_head_eyes/GUI"]
offset_left = 250.0
offset_top = 33.0
offset_right = 290.0
offset_bottom = 56.0

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_g5jw4")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.22609, -3.20601)
